2008-01-30 13:49  gellyfish

	* lib/XML/XSLT.pm, t/open.t, t/select-text.t: Interim release

2008-01-30 12:08  gellyfish

	* t/select-text.t: New test from Mike Whitaker

2008-01-30 11:23  gellyfish

	* t/deprecation.t: Re-added

2007-10-05 15:43  gellyfish

	* MANIFEST, t/include.xsl, t/open.t, t/open.xml, t/open.xsl: added
	  est files to CVS

2007-10-05 15:12  gellyfish

	* Makefile.PL: Added XML::DOM::XPath dependency

2007-10-05 14:55  gellyfish

	* t/: include.t, pattern.t: Added test for includes, made pattern a
	  TODO test

2007-10-05 14:44  gellyfish

	* t/: open.t, pattern.t, to_dom.t: added tests, fixed include

2007-10-04 19:37  gellyfish

	* lib/XML/XSLT.pm: updated

2007-05-25 16:16  gellyfish

	* MANIFEST, lib/XML/XSLT.pm, t/pattern.t, t/variable.t: * Merged in
	  some changes

2006-11-17 21:16  gellyfish

	* lib/XML/XSLT.pm: Check in interim fix for literal variable at top
	  level

2005-12-08 12:53  gellyfish

	* lib/XML/XSLT.pm: Added patch from andy_bach@wiwb.usourts.gov to
	  fix warning in __evaluate_test__

2004-09-16 16:15  gellyfish

	* examples/: xslt.xsl, xsltdoc.xsl: Renamed the xslt.xsl to
	  xsltdoc.xsl - as it appears to interfere with Cygwin

2004-06-02 08:48  gellyfish

	* lib/XML/XSLT.pm: Fixed the check if $args{Source} is an
	  'XML::DOM::Document' from John Bywater.

2004-04-02 11:48  gellyfish

	* lib/XML/XSLT.pm, t/pattern.t, t/variable.t: Fixing disposal bug

2004-02-20 09:24  gellyfish

	* META.yml, Makefile.PL, lib/XML/XSLT.pm, t/variable.t: * Fixes to
	  variables

2004-02-19 08:38  gellyfish

	* ChangeLog, MANIFEST, lib/XML/XSLT.pm, t/for-each.t, t/select.t: *
	  Fixed overlapping attribute-sets * Allow multiple nodes for
	  processing-instruction() etc * Added test for for-each

2004-02-18 08:34  gellyfish

	* MANIFEST, lib/XML/XSLT.pm, t/select.t: * Fixed select on
	  "comment()" "processing-instruction()" etc * Added test for
	  select

2004-02-17 10:44  gellyfish

	* t/attributes.t: * More attribute tests
