@@ -1,17 +1,23 @@
 --- #YAML:1.0
-name:                XML-XSLT
-version:             0.50_1
-abstract:            Conversion of XML files with XSLT.
-license:             ~
-author:              
+name:               XML-XSLT
+version:            0.50_2
+abstract:           Conversion of XML files with XSLT.
+author:
     - Geert Josten (gjosten@sci.kun.nl) and Egon Willighagen (egonw@sci.kun.nl)
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Test::More:                    0.7
-    XML::DOM:                      1.25
-    XML::DOM::XPath:               0.10
-    XML::Parser:                   2.23
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Test::More:       0.7
+    XML::DOM:         1.25
+    XML::DOM::XPath:  0.10
+    XML::Parser:      2.23
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
